# Beyond-Centiloid-code

./: .gitignore  README.md
cpp/: CMakeLists.txt  Calculator.cpp  Calculator.h  Decoupler.cpp  Decoupler.h  Rigid.cpp  Rigid.h  common.cpp  common.h  main.cpp
cpp/CentiloidCalculator/: CMakeLists.txt  CentiloidCalculator.cpp  Rigid.cpp  Rigid.h
py/: AD_decouple.ipynb  abeta_pattern.ipynb  affine_voxelmorph.py  constants.py  data.py  dataloader.py  decouple.py  decouple_utils.py  evaluator.py  fdg_classifier_eval.ipynb  fdg_simple_classifier.py  nets.py  plot.py  rigid.py  train.py  transforms.py  utils.py  visualize.py
